<resources>
    <string name="app_name">Factucoco</string>
    <string name="txt_show_invoice">Mostrar</string>
    <string name="txt_delete_invoice">Eliminar</string>
    <string name="txt_add_invoice">Añadir factura</string>
    <string name="txt_cancel">Cancelar</string>
    <string name="txt_accept">Aceptar</string>
    <string name="txt_about_app">Acerca de</string>
    <string name="txt_app_description">Esta app es un gestor de facturas.</string>
    <string name="view_about_app">Acerca de Factucoco</string>
    <string name="txt_name">Nombre</string>
    <string name="txt_date">Fecha</string>
    <string name="txt_vat_rate">IVA %</string>
    <string name="txt_vat">Cuota</string>
    <string name="txt_total">Total</string>
    <string name="txt_create">Crear factura</string>
    <string name="txt_id">ID</string>
    <string name="view_editcreate_activity">Crear | Modificar</string>
    <string name="txt_amount">Base</string>
    <string name="hint_description">Redacte un resumen</string>
    <string name="txt_description">Descripcion</string>
    <string name="toast_deleted_invoice">Factura eliminada</string>
    <string name="txt_edit">Editar</string>
    <string name="modified_invoice">Factura modificada</string>
    <string name="created_invoice">Factura creada</string>
</resources>